feat: fixed all the file paths and removed icon buttoncomponent

--- a/example/storybook/src/components/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Actionsheet/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Actionsheet` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Actionsheet
+npx install @gluestack-ui add actionsheet
 ```
 
 ## Usage
@@ -387,7 +387,7 @@ import {
   DragIndicator,
   IndicatorWrapper,
   Backdrop,
-} from '../ui-components/Actionsheet/styled-components';
+} from '../components/core/actionsheet/styled-components';
 
 // import the createActionsheet function
 import { createActionsheet } from '@gluestack-ui/actionsheet';
@@ -419,4 +419,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Actionsheet` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Actionsheet/index.tsx) of the styled `Actionsheet` components.
+Default styling of all these components can be found in the `components/core/actionsheet` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Actionsheet/index.tsx) of the styled `Actionsheet` components.
