--- a/example/storybook/src/components/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Alert/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Alert` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Alert
+npx install @gluestack-ui add alert
 ```
 
 ## Usage
@@ -199,7 +199,7 @@ We have a function called `createAlert` which can be used to create a custom ale
 
 ```jsx
 // import the styles
-import { Root, Text, Icon } from '../ui-components/Alert/styled-components';
+import { Root, Text, Icon } from '../components/core/alert/styled-components';
 
 // Understanding the API
 const Alert: any = Root;
@@ -215,4 +215,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `ui-components/Alert` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Alert/index.tsx) of the styled `Alert` components.
+Default styling of all these components can be found in the `components/core/alert` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Alert/index.tsx) of the styled `Alert` components.
