--- a/example/storybook/src/components/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/Avatar/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Avatar` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Avatar
+npx install @gluestack-ui add avatar
 ```
 
 ## Usage
@@ -246,7 +246,7 @@ import {
   Group,
   Image,
   FallbackText,
-} from '../ui-components/Avatar/styled-components';
+} from '../components/core/avatar/styled-components';
 
 // import the createAvatar function
 import { createAvatar } from '@gluestack-ui/avatar';
@@ -271,4 +271,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Avatar` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Button/index.tsx) of the styled `Avatar` components.
+Default styling of all these components can be found in the `components/core/avatar` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Button/index.tsx) of the styled `Avatar` components.
