--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Checkbox` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Checkbox
+npx install @gluestack-ui add checkbox
 ```
 
 ## Usage
@@ -580,7 +580,7 @@ import {
   Icon,
   Label,
   Group,
-} from '../ui-components/Checkbox/styled-components';
+} from '../components/core/checkbox/styled-components';
 
 // import the createCheckbox function
 import { createCheckbox } from '@gluestack-ui/checkbox';
@@ -608,4 +608,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Checkbox` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Checkbox/index.tsx) of the styled `Checkbox` components.
+Default styling of all these components can be found in the `components/core/checkbox` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Checkbox/index.tsx) of the styled `Checkbox` components.
