--- a/example/storybook/src/components/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/FormControl/index.stories.mdx
@@ -31,7 +31,7 @@ import Wrapper from '../Wrapper';
 This command copies the `FormControl` component to your project.
 
 ```jsx
-npx install @gluestack-ui add FormControl
+npx install @gluestack-ui add form-control
 ```
 
 ## Usage
@@ -308,7 +308,7 @@ import {
   LabelAstrick,
   Helper,
   HelperText,
-} from '../ui-components/FormControl/styled-components';
+} from '../components/core/form-control/styled-components';
 
 // import the createFormControl function
 import { createFormControl } from '@gluestack-ui/form-control';
@@ -346,4 +346,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/FormControl` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/FormControl/index.tsx) of the styled `FormControl` components.
+Default styling of all these components can be found in the `components/core/form-control` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/FormControl/index.tsx) of the styled `FormControl` components.
