--- a/example/storybook/src/components/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Menu/index.stories.mdx
@@ -34,7 +34,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Menu` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Menu
+npx install @gluestack-ui add menu
 ```
 
 ## Usage
@@ -518,7 +518,7 @@ import {
   Group,
   GroupTitle,
   MenuItem,
-} from '../ui-components/Menu/styled-components';
+} from '../components/core/menu/styled-components';
 
 // import the createMenu function
 import { createMenu } from '@gluestack-ui/menu';
@@ -544,5 +544,5 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Menu` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Menu/index.tsx) of the styled `Menu` components.
+Default styling of all these components can be found in the `components/core/menu` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Menu/index.tsx) of the styled `Menu` components.
 w
