--- a/example/storybook/src/components/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Modal/index.stories.mdx
@@ -31,7 +31,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Modal` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Modal
+npx install @gluestack-ui add modal
 ```
 
 ## Usage
@@ -574,7 +574,7 @@ import {
   Footer,
   Body,
   Backdrop,
-} from '../ui-components/Modal/styled-components';
+} from '../components/core/modal/styled-components';
 
 // import the createModal function
 import { createModal } from '@gluestack-ui/modal';
@@ -617,4 +617,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Modal` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Modal/index.tsx) of the styled `Modal` components.
+Default styling of all these components can be found in the `components/core/modal` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Modal/index.tsx) of the styled `Modal` components.
