--- a/example/storybook/src/components/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Popover/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Popover` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Popover
+npx install @gluestack-ui add popover
 ```
 
 ## Usage
@@ -451,7 +451,7 @@ import {
   Body,
   Backdrop,
   CloseButton,
-} from '../ui-components/Popover/styled-components';
+} from '../components/core/popover/styled-components';
 
 // import the createPopover function
 import { createPopover } from '@gluestack-ui/popover';
@@ -482,4 +482,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Popover` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Popover/index.tsx) of the styled `Popover` components.
+Default styling of all these components can be found in the `components/core/popover` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Popover/index.tsx) of the styled `Popover` components.
