--- a/example/storybook/src/components/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Tooltip/index.stories.mdx
@@ -298,7 +298,7 @@ We have a function called `createTooltip` which can be used to create a custom t
 ```jsx
 // import the styles
 
-import { Root, Content } from '../ui-components/Tooltip/styled-components';
+import { Root, Content } from '../components/core/Tooltip/styled-components';
 
 // import the createTooltip function
 import { createTooltip } from '@gluestack-ui/tooltip';
@@ -317,4 +317,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Tooltip` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Tooltip/index.tsx) of the styled `Tooltip` components.
+Default styling of all these components can be found in the `components/core/Tooltip` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Tooltip/index.tsx) of the styled `Tooltip` components.
