--- a/example/storybook/src/components/AlertDialog/index.stories.mdx
+++ b/example/storybook/src/components/AlertDialog/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `AlertDialog` component to your project.
 
 ```jsx
-npx install @gluestack-ui add AlertDialog
+npx install @gluestack-ui add alert-dialog
 ```
 
 ## Usage
@@ -438,7 +438,7 @@ import {
   Footer,
   Body,
   Backdrop,
-} from '../ui-components/AlertDialog/styled-components';
+} from '../components/core/alert-dialog/styled-components';
 
 // import the createAlertDialog function
 import { createAlertDialog } from '@gluestack-ui/alert-dialog';
@@ -481,4 +481,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `ui-components/AlertDialog` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/AlertDialog/index.tsx) of the styled `AlertDialog` components.
+Default styling of all these components can be found in the `components/core/alert-dialog` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/AlertDialog/index.tsx) of the styled `AlertDialog` components.
