--- a/example/storybook/src/components/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Fab/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Fab` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Fab
+npx install @gluestack-ui add fab
 ```
 
 ## Usage
@@ -270,7 +270,7 @@ We have a function called `createFab` which can be used to create a custom fab c
 
 ```jsx
 // import the styles
-import { Root, Label } from '../ui-components/Fab/styled-components';
+import { Root, Label } from '../components/core/core/fab/styled-components';
 
 // import the createFab function
 import { createFab } from '@gluestack-ui/fab';
@@ -289,4 +289,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Fab` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Fab/index.tsx) of the styled `Fab` components.
+Default styling of all these components can be found in the `components/core/fab` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Fab/index.tsx) of the styled `Fab` components.
