--- a/example/storybook/src/components/HStack/index.stories.mdx
+++ b/example/storybook/src/components/HStack/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../Wrapper';
 This command copies the `HStack` component to your project.
 
 ```jsx
-npx install @gluestack-ui add HStack
+npx install @gluestack-ui add hstack
 ```
 
 ## Usage
@@ -175,7 +175,7 @@ We have a function called `createHStack` which can be used to create a custom HS
 
 ```jsx
 // import the styles
-import { Root, Spacer } from '../ui-components/HStack/styled-components';
+import { Root, Spacer } from '../components/core/hstack/styled-components';
 
 // import the createHStack function
 import { createHStack } from '@gluestack-ui/hstack';
@@ -195,4 +195,4 @@ export default () => (
 );
 ```
 
-Default styling of the component can be found in the `ui-components/HStack` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/HStack/index.tsx) of the styled `HStack` component.
+Default styling of the component can be found in the `components/core/hstack` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/HStack/index.tsx) of the styled `HStack` component.
