--- a/example/storybook/src/components/Heading/index.stories.mdx
+++ b/example/storybook/src/components/Heading/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Heading` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Heading
+npx install @gluestack-ui add heading
 ```
 
 ## Usage
@@ -99,7 +99,7 @@ For customizing the Heading, you have to map styled view to Heading. You can ref
 
 ```jsx
 // import the styles
-import { Root } from '../ui-components/Heading/styled-components';
+import { Root } from '../components/core/heading/styled-components';
 
 // mapping the Heading to root component
 const Heading = Root;
@@ -112,4 +112,4 @@ export default () => (
 );
 ```
 
-Default styling of the component can be found in the `ui-components/Heading` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Heading/index.tsx) of the styled `Heading` component.
+Default styling of the component can be found in the `components/core/heading` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Heading/index.tsx) of the styled `Heading` component.
