--- a/example/storybook/src/components/Icon/index.stories.mdx
+++ b/example/storybook/src/components/Icon/index.stories.mdx
@@ -36,7 +36,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Icon` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Icon
+npx install @gluestack-ui add icon
 ```
 
 ## Usage
@@ -201,7 +201,7 @@ We have a function called `createIcon` which can be used to create a custom icon
 
 ```jsx
 // import the styles
-import { Root } from '../ui-components/Icon/styled-components';
+import { Root } from '../components/core/core/icon/styled-components';
 
 // import the createIcon function
 import { createIcon } from '@gluestack-ui/icon';
@@ -212,14 +212,7 @@ const Icon = createIcon({
 });
 
 // Using the icon component
-export default () => (
-  <Icon.Group>
-    <Icon>
-      <Icon.Text />
-      <Icon.Spinner />
-    </Icon>
-  </Icon.Group>
-);
+export default () => <Icon />;
 ```
 
-Default styling of all these components can be found in the `ui-components/Icon` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Icon/index.tsx) of the styled `Icon` components.
+Default styling of all these components can be found in the `components/core/icon` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Icon/index.tsx) of the styled `Icon` components.
