--- a/example/storybook/src/components/Tabs/index.stories.mdx
+++ b/example/storybook/src/components/Tabs/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Tabs` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Tabs
+npx install @gluestack-ui add tabs
 ```
 
 ## Usage
@@ -190,7 +190,7 @@ import {
   TabList,
   TabTitle,
   TabIcon,
-} from '../ui-components/Tabs/styled-components';
+} from '../components/core/tabs/styled-components';
 
 // import the createTabs function
 import { createTabs } from '@gluestack-ui/tabs';
@@ -221,4 +221,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Tabs` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Tabs/index.tsx) of the styled `Tabs` components.
+Default styling of all these components can be found in the `components/core/tabs` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Tabs/index.tsx) of the styled `Tabs` components.
