--- a/example/storybook/src/components/Text/index.stories.mdx
+++ b/example/storybook/src/components/Text/index.stories.mdx
@@ -22,7 +22,7 @@ import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 This command copies the `Text` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Text
+npx install @gluestack-ui add text
 ```
 
 ## Usage
@@ -154,7 +154,7 @@ For customizing the Text, you have to map styled view to Text. You can refer [da
 
 ```jsx
 // import the styles
-import { Root } from '../ui-components/Text/styled-components';
+import { Root } from '../components/core/text/styled-components';
 
 // mapping the Text to root component
 const Text = Root;
@@ -163,4 +163,4 @@ const Text = Root;
 export default () => <Text />;
 ```
 
-Default styling of the component can be found in the `ui-components/Text` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Text/index.tsx) of the styled `Text` component.
+Default styling of the component can be found in the `components/core/text` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Text/index.tsx) of the styled `Text` component.
