--- a/example/storybook/src/components/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Toast/index.stories.mdx
@@ -30,7 +30,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Toast` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Toast
+npx install @gluestack-ui add toast
 ```
 
 ## Usage
@@ -308,7 +308,7 @@ import {
   Root,
   Title,
   Description,
-} from '../ui-components/Toast/styled-components';
+} from '../components/core/toast/styled-components';
 
 // import the createToast function
 import { createToast, createToastHook } from '@gluestack-ui/toast';
@@ -347,4 +347,4 @@ export default () => {
 };
 ```
 
-Default styling of all these components can be found in the `components/Toast` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Toast/index.tsx) of the styled `Toast` components.
+Default styling of all these components can be found in the `components/core/toast` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Toast/index.tsx) of the styled `Toast` components.
