--- a/example/storybook/src/components/VStack/index.stories.mdx
+++ b/example/storybook/src/components/VStack/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../Wrapper';
 This command copies the `VStack` component to your project.
 
 ```jsx
-npx install @gluestack-ui add VStack
+npx install @gluestack-ui add vstack
 ```
 
 ## Usage
@@ -175,7 +175,7 @@ We have a function called `createVStack` which can be used to create a custom VS
 
 ```jsx
 // import the styles
-import { Root, Spacer } from '../ui-components/VStack/styled-components';
+import { Root, Spacer } from '../components/core/vstack/styled-components';
 
 // import the createVStack function
 import { createVStack } from '@gluestack-ui/vstack';
@@ -190,4 +190,4 @@ const VStack = createVStack({
 export default () => <VStack />;
 ```
 
-Default styling of the component can be found in the `ui-components/VStack` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/VStack/index.tsx) of the styled `VStack` component.
+Default styling of the component can be found in the `components/core/vstack` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/VStack/index.tsx) of the styled `VStack` component.
