--- a/example/storybook/src/components/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/FormControl/index.stories.mdx
@@ -281,7 +281,7 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 
 ## Dependencies
 
-- `@universa11y/utils`
+- `@gluestack-ui/utils`
 - `@react-native-aria/focus`
 - `react-native-svg`
 
