--- a/example/storybook/src/components/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/index.stories.mdx
@@ -41,7 +41,7 @@ npx install @gluestack-ui add provider
 // import { config } from '../gluestack.config';
 function App(){
   return (
-    <Provider config={config}>
+    <Provider config={config.theme}>
       <Text color="$pink600" fontWeight="bold">
         Provider
       </Text>
