--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -12,7 +12,7 @@ import { useRef, useEffect, useState } from 'react';
 <Meta title="components/Forms/Slider" />
 
 import { Slider } from './Slider';
-import { transformedCode } from '../../utils';
+import { transformedCode } from '../../../utils';
 import {
   AppProvider,
   CodePreview,
