--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -7,7 +7,7 @@ showHeader: true
 ---
 
 import { Meta } from '@storybook/addon-docs';
-import { config } from '../../gluestack-ui.config';
+import { config } from '../../../gluestack-ui.config';
 
 <Meta title="components/Provider/Provider" />
 
