feat: fixed all the bugs

--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Input` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Input
+npx install @gluestack-ui add input
 ```
 
 ## Usage
@@ -289,7 +289,7 @@ We have a function called `createInput` which can be used to create a custom but
 
 ```jsx
 // import the styles
-import { Root, Input } from '../ui-components/Input/styled-components';
+import { Root, Input } from '../components/core/input/styled-components';
 
 // import the createInput function
 import { createInput } from '@gluestack-ui/input';
@@ -308,4 +308,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Input` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Input/index.tsx) of the styled `Input` components.
+Default styling of all these components can be found in the `components/core/input` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Input/index.tsx) of the styled `Input` components.
