--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -27,7 +27,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Select` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Select
+npx install @gluestack-ui add select
 ```
 
 ## Usage
@@ -340,7 +340,7 @@ import {
   Icon,
   Item,
   ItemList,
-} from '../ui-components/Select/styled-components';
+} from '../components/core/select/styled-components';
 
 import {
   Root as ActionsheetRoot,
@@ -350,7 +350,7 @@ import {
   DragIndicator,
   IndicatorWrapper,
   Content,
-} from '../ui-components/Actionsheet/styled-components';
+} from '../components/core/actionsheet/styled-components';
 
 // import the createSelect and createActionsheet function
 import { createSelect } from '@gluestack-ui/select';
@@ -388,4 +388,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Select` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Select/index.tsx) of the styled `Select` components.
+Default styling of all these components can be found in the `components/select` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Select/index.tsx) of the styled `Select` components.
