--- a/example/storybook/src/components/Forms/Button/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Button/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Button` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Button
+npx install @gluestack-ui add button
 ```
 
 ## Usage
@@ -502,7 +502,7 @@ import {
   GroupHSpacer,
   GroupVSpacer,
   Spinner,
-} from '../ui-components/Button/styled-components';
+} from '../components/core/button/styled-components';
 
 // import the createButton function
 import { createButton } from '@gluestack-ui/button';
@@ -528,4 +528,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `ui-components/Button` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Button/index.tsx) of the styled `Button` components.
+Default styling of all these components can be found in the `components/core/button` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Button/index.tsx) of the styled `Button` components.
