--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Slider` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Slider
+npx install @gluestack-ui add slider
 ```
 
 ## Usage
@@ -163,7 +163,7 @@ import {
   Track,
   FilledTrack,
   ThumbInteraction,
-} from '../ui-components/Slider/styled-components';
+} from '../components/core/slider/styled-components';
 
 // import the createSlider function
 import { createSlider } from '@gluestack-ui/slider';
@@ -188,4 +188,4 @@ export default () => (
 );
 ```
 
-Default styling of the component can be found in the `ui-components/Slider` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Slider/index.tsx) of the styled `Slider` component.
+Default styling of the component can be found in the `components/slider` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Slider/index.tsx) of the styled `Slider` component.
