--- a/example/storybook/src/components/Forms/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Switch/index.stories.mdx
@@ -1,29 +1,9 @@
----
-title: Switch | UI
-description: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
-pageTitle: Switch
-pageDescription: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
-showHeader: true
----
-
-import { Meta } from '@storybook/addon-docs';
-
-<Meta title="components/Forms/Switch" />
-
-import { Switch, VStack } from './Switch';
-import { transformedCode } from '../../../utils';
-import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
-
-import { styled } from '@dank-style/react';
-
-import Wrapper from '../../Wrapper';
-
 # Installation
 
 This command copies the `Switch` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Switch
+npx install @gluestack-ui add switch
 ```
 
 ## Usage
@@ -147,7 +127,7 @@ We have a function called `createSwitch` which can be used to create a custom sw
 
 ```jsx
 // import the styles
-import { Root } from '../components/Switch/styled-components';
+import { Root } from '../components/core/switch/styled-components';
 
 // import the createSwitch function
 import { createSwitch } from '@gluestack-ui/switch';
@@ -161,4 +141,4 @@ const Switch = createSwitch({
 export default () => <Switch />;
 ```
 
-Default styling of all these components can be found in the `components/Switch` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Switch/index.tsx) of the styled `Switch` components.
+Default styling of all these components can be found in the `components/core/switch` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/components/Switch/index.tsx) of the styled `Switch` components.
