--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -29,7 +29,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `TextArea` component to your project.
 
 ```jsx
-npx install @gluestack-ui add TextArea
+npx install @gluestack-ui add text-area
 ```
 
 ## Usage
@@ -289,7 +289,7 @@ We have a function called `createTextArea` which can be used to create a custom 
 
 ```jsx
 // import the styles
-import { Root, Input } from '../ui-components/TextArea/styled-components';
+import { Root, Input } from '../components/core/text-area/styled-components';
 
 // import the createTextArea function
 import { createTextArea } from '@gluestack-ui/textarea';
@@ -308,4 +308,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/TextArea` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/TextArea/index.tsx) of the styled `TextArea` components.
+Default styling of all these components can be found in the `components/text-area` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/TextArea/index.tsx) of the styled `TextArea` components.
