--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -24,7 +24,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Box` component to your project.
 
 ```jsx
-npx install @gluestack-ui add Box
+npx install @gluestack-ui add box
 ```
 
 ## Usage
@@ -146,7 +146,7 @@ For customizing the Box, you have to map styled view to Box. You can refer [dank
 
 ```jsx
 // import the styles
-import { Root } from '../ui-components/Box/styled-components';
+import { Root } from '../components/core/box/styled-components';
 
 // mapping the Text to root component
 const Box = Root;
@@ -159,4 +159,4 @@ export default () => (
 );
 ```
 
-Default styling of the component can be found in the `ui-components/Box` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Box/index.tsx) of the styled `Box` component.
+Default styling of the component can be found in the `components/box` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Box/index.tsx) of the styled `Box` component.
