--- a/example/storybook/src/components/Forms/Switch/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Switch/index.stories.mdx
@@ -1,3 +1,23 @@
+---
+title: Switch | UI
+description: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
+pageTitle: Switch
+pageDescription: The Switch provides an alternative to the Checkbox component. It also allows a user to switch between enabled or disabled states.
+showHeader: true
+---
+
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="components/Forms/Switch" />
+
+import { Switch, VStack } from './Switch';
+import { transformedCode } from '../../../utils';
+import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
+
+import { styled } from '@dank-style/react';
+
+import Wrapper from '../../Wrapper';
+
 # Installation
 
 This command copies the `Switch` component to your project.
