--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -32,18 +32,11 @@ This command copies the `Alert` component to your project.
 npx install @gluestack-ui add alert
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Alert } from 'components';
-
-// Using the alert component
-export default () => (
-  <Alert>
-    <Alert.Text>Alert</Alert.Text>
-  </Alert>
-);
 ```
 
 <br />
