--- a/example/storybook/src/components/Feedback/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Progress/index.stories.mdx
@@ -26,18 +26,11 @@ This command copies the `Progress` component to your project.
 npx install @gluestack-ui add progress
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Progress } from 'components';
-
-// Using the Progress component
-export default () => (
-  <Progress value={60}>
-    <Progress.FilledTrack />
-  </Progress>
-);
 ```
 
 <br />
