--- a/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
@@ -31,26 +31,11 @@ This command copies the `Actionsheet` component to your project.
 npx install @gluestack-ui add actionsheet
 ```
 
-## Usage
+## Import
 
 ```jsx
 // import the component from your component folder
 import { Actionsheet } from 'components';
-
-// Using the actionsheet component
-export default () => (
-  <Actionsheet isOpen={showActionsheet} onClose={handleClose}>
-    <Actionsheet.Backdrop />
-    <Actionsheet.Content>
-      <Actionsheet.DragIndicatorWrapper>
-        <Actionsheet.DragIndicator />
-      </Actionsheet.DragIndicatorWrapper>
-      <Actionsheet.Item onPress={handleClose}>
-        <Actionsheet.ItemText>Community</Actionsheet.ItemText>
-      </Actionsheet.Item>
-    </Actionsheet.Content>
-  </Actionsheet>
-);
 ```
 
 <br />
