--- a/example/storybook/src/components/Layout/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Divider/index.stories.mdx
@@ -95,34 +95,39 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     showArgsController={false}
     metaData={{
       code: `
-<Text>Vertical</Text>
-<HStack h={20} space="md" alignItems="center">
+<HStack>
   <Text>Simple</Text>
-  <Divider variant="vertical"/>
+  <Divider
+    variant="vertical"
+    sx={{ mx: 10, bg: '$emerald500', h: 30 }}
+  />
   <Text>Easy</Text>
-  <Divider variant="vertical"/>
+  <Divider
+    sx={{ mx: 10, bg: '$indigo500', h: 30 }}
+    variant="vertical"
+  />
   <Text>Beautiful</Text>
 </HStack>
-<Text>Horizontal</Text>
 <VStack>
   <Text>Firefox</Text>
-  <Divider variant="horizontal" />
+  <Divider variant="horizontal" sx={{ bg: '$red500' }} />
   <Text>Chrome</Text>
 </VStack>
 `,
-      transformCode: (code) => {
-        return transformedCode(code);
-      },
-      scope: {
-        Wrapper,
-        Divider,
-        VStack,
-        HStack,
-        Text,
-      },
-      argsType: {},
-    }}
-  />
+transformCode: (code) => {
+return transformedCode(code);
+},
+scope: {
+Wrapper,
+Divider,
+VStack,
+HStack,
+Text,
+},
+argsType: {},
+}}
+/>
+
 </AppProvider>
 
 <br />
